crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__variable__uninitialized.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/uninitialized.lox
---
success: true
exit_code: 0
----- stdout -----
nil

----- stderr -----
