crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__variable__unreached_undefined.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/unreached_undefined.lox
---
success: true
exit_code: 0
----- stdout -----
ok

----- stderr -----
