crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__variable__use_local_in_initializer.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/use_local_in_initializer.lox
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
