crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__variable__use_nil_as_var.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/use_nil_as_var.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: at `nil`: expected Identifier
   ╭─[craftinginterpreters/test/variable/use_nil_as_var.lox:2:5]
   │
 2 │ var nil = "value";
   │     ───  
───╯
